--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,11 @@ ul li{
     font-size: 18px;
 }
 
+ul li:hover{
+    border-left: 4px solid rgb(247, 0, 0);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
 #book-list .delete{
     background-color: rgb(0, 0, 0);
     padding: 0.5rem;
